%% title: ERD 05a2 - Work Package / Task / Bug
%% Module: Project work-breakdown structure, execution level (part 2 of 4, see erd-05a1 for Phase/Milestone, erd-05b1/05b2 for approval workflow)

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PmWorkPackage {
        UUID id
        UUID business_id
        UUID milestone_id
        string package_name
        string description
        date start_date
        date end_date
        string color
        string status
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmTask {
        UUID id
        UUID business_id
        UUID work_package_id
        UUID spec_id
        string task_code
        string task_name
        string description
        string assigned_to
        date start_date
        date end_date
        date actual_start
        date actual_end
        int estimate_manday
        string color
        int actual_manday
        string status
        string priority
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmTaskAssignee {
        UUID id
        UUID business_id
        UUID task_id
        string user_id
        string role_in_task
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmBug {
        UUID id
        UUID business_id
        UUID project_id
        UUID task_id
        UUID test_case_id
        string bug_code
        string title
        string description
        string steps_to_reproduce
        string environment
        string issue_type
        UUID attachment_group_id
        string severity
        string priority
        string found_by
        string assigned_to
        timestamp found_date
        date fix_due_date
        timestamp fixed_date
        string status
        string related_spec
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
    }

    PmWorkPackage |o--o{ PmTask : "has"

    PmTask ||--o{ PmTaskAssignee : "assigned to"
    PmTask |o--o{ PmBug : "reported for"

